<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/quantity_title"
        style="@style/HeadersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/quantity_title" />

    <LinearLayout
        android:id="@+id/quantity_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantity_title"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/increase_quantity"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="+"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/quantity"
            style="@style/ResultsTextView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="0"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/decrease_quantity"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="-"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/flavors_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantity_layout"
        android:checkedButton="@+id/chocolate">

        <RadioButton
            android:id="@+id/chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate_flavor" />

        <RadioButton
            android:id="@+id/cream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cream_flavor" />
    </RadioGroup>

    <View
        android:id="@+id/line_break"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/flavors_group"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/price_title"
        style="@style/HeadersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_break"
        android:layout_centerHorizontal="true"
        android:text="@string/price_title" />

    <TextView
        android:id="@+id/total_price"
        style="@style/ResultsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_title"
        android:layout_centerHorizontal="true"
        android:text="$0"
        android:textAlignment="center"
        tools:ignore="HardcodedText" />

    <View
        android:id="@+id/line_break_one"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/total_price"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/order_button"
        android:layout_below="@id/line_break_one"
        android:paddingEnd="16dp"
        android:paddingStart="8dp"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/total_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />
    </ScrollView>

    <Button
        android:id="@+id/order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/order_button" />

</RelativeLayout>